--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,13 @@
 html {
     font-family: sans-serif, "Sawarabi Gothic";
 }
+
+#map {
+    min-width: 30vw;
+    min-height: 80vh;
+}
+
+.map-icon {
+    width: 50px;
+    height: 50px;
+}
