--- a/css/main.css
+++ b/css/main.css
@@ -2,12 +2,6 @@ html {
     font-family: sans-serif, "Sawarabi Gothic";
 }
 
-#map {
-    min-width: 30vw;
-    min-height: 80vh;
-}
-
-.map-icon {
-    width: 50px;
-    height: 50px;
+body {
+    margin: 0%;
 }
