--- a/css/main.css
+++ b/css/main.css
@@ -12,13 +12,30 @@ body {
     width: 50px;
     text-align: center;
     left: calc(50% - 46px);
-    bottom: 25%;
+    bottom: 15%;
+    height: 50px;
+    border: 4px solid;
+    border-color: #000000;
+    border-radius: 15px;
+    padding: 15px;
+    background: rgba(255,255,255,0.5);
+}
+
+/*
+.current {
+    position: absolute;
+    z-index: 5;
+    width: 50px;
+    text-align: center;
+    left: calc(50% - 46px);
+    bottom: 15%;
     height: 50px;
     border: 4px solid;
     border-color: #000000;
     border-radius: 15px;
     padding: 15px;
 }
+*/
 
 .info {
     position: absolute;
