--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,40 @@ body {
     background: rgba(255,255,255,0.5);
 }
 
+.menu_icon {
+    position: absolute;
+    z-index: 5;
+    width: 30px;
+    text-align: center;
+    right: calc(5% + 1rem);
+    top: calc(5% + 1rem);;
+    height: 30px;
+    border: 4px solid;
+    border-color: #000000;
+    border-radius: 8px;
+    padding: 8px;
+    background: rgba(255,255,255,0.5);
+}
+
+.menu_close {
+    position: absolute;
+    z-index: 25;
+    width: 30px;
+    text-align: center;
+    right: calc(5% + 1rem);;
+    top: calc(5% + 1rem);;
+    height: 30px;
+    border: 4px solid;
+    border-color: #000000;
+    border-radius: 8px;
+    padding: 8px;
+    background: rgba(255,255,255,0.5);
+}
+
+.none {
+    display: none;
+}
+
 /*
 .current {
     position: absolute;
@@ -52,7 +86,7 @@ body {
 */
 
 a {
-    color: rgb(16, 158, 240);
+    color: rgb(9, 25, 46);
     cursor:pointer;
     text-decoration: underline;
 }
