一部の構造を変更 Following:`v0.9.2`

--- a/css/main.css
+++ b/css/main.css
@@ -90,3 +90,11 @@ a {
     cursor:pointer;
     text-decoration: underline;
 }
+
+img {
+    pointer-events: none;
+}
+
+.selectable {
+    pointer-events: auto;
+}
