--- a/css/map.css
+++ b/css/map.css
@@ -8,11 +8,11 @@
 }
 
 .map-icon {
-    width: 50px;
+    text-align: center;
 }
 
 .marker {
-    background-image: url('/image/marker.png');
+    background-image: url('/image/default.png');
     background-size: cover;
     width: 50px;
     height: 50px;
