軽度な見た目とかの仕様変更 1. オフライン時にアイコンがクレーアウトします 2. アイコンのクリック当たり判定を調整します 3. サーバー時間との調整を行います 4. マーカーにユーザー情報を埋め込みます

--- a/css/map.css
+++ b/css/map.css
@@ -23,3 +23,11 @@
 .marker-speed {
     text-align: center;
 }
+
+.marker-online {
+    filter: none;
+}
+
+.marker-offline {
+    filter: grayscale(1);
+}
