--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@ body {
     width: 30px;
     text-align: center;
     right: calc(5% + 1rem);
-    top: calc(5% + 1rem);;
+    top: calc(5% + 1rem);
     height: 30px;
     border: 4px solid;
     border-color: #000000;
@@ -41,8 +41,8 @@ body {
     z-index: 25;
     width: 30px;
     text-align: center;
-    right: calc(5% + 1rem);;
-    top: calc(5% + 1rem);;
+    right: calc(5% + 1rem);
+    top: calc(5% + 1rem);
     height: 30px;
     border: 4px solid;
     border-color: #000000;
